# SDLSkeleton_Source

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  android.sh  emscripten.sh  game.cmake.in  generate_project.sh  main.cpp  removeComments.py  run_emcripten.sh
.github/data/: Certificates.p12  Certificates.p12.gpg  ExportOptions.plist  ExportOptionsDeveloperId.plist  exportOptionsAdHoc.plist  provisioning.tar.gz.gpg
.github/secrets/: Certificates.p12  Certificates.p12.gpg  decrypt_secrets.sh  profile.mobileprovision  profile.mobileprovision.gpg
.github/workflows/: appletvos.yml  c-cpp.yml  emscripten.yml  ios.yml  ios2.yml  ios_vr.yml  linux.yml  macOS.yml
platform/: CMakeLists.txt  TestClass.cpp  TestClass.h
platform/android/: AndroidManifest.xml  CMakeLists.txt  native-lib.cpp
platform/android/com/example/streamingplayer/: MainActivity.java
platform/doc/doxygen/: Doxyfile.in  doxygen.cmake
platform/macos/: CMakeLists.txt
platform/platform/android/resources/: strings.xml.in
platform/resources/: .gitignore
platform/shared/: CMakeLists.txt  TestClass.cpp  TestClass.h
platform/shared/platform/android/resources/res/values/: strings.xml
platform/shared/platform/macos/: CMakeLists.txt
platform/shared/platform/macos/test/cpp/: CMakeLists.txt
platform/shared/test/: CMakeLists.txt
platform/shared/test/cpp/: CMakeLists.txt  TestExample.cpp  TestExample.h
platform/swig/: CMakeLists.txt  swig.cmake
platform/test/cpp/: CMakeLists.txt  TestExample.cpp
src/: CMakeLists.txt
src/cmake/: detectGL.cmake
src/cpp/: TestClass.cpp  TestClass.h
src/doc/doxygen/: Doxyfile.in  doxygen.cmake
src/platform/android/: AndroidManifest.xml  CMakeLists.txt
src/platform/appletvos/: CMakeLists.txt
src/platform/appletvos/resources/: Info.plist.in
src/platform/appletvos/test/: CMakeLists.txt
src/platform/appletvos/test/cpp/: CMakeLists.txt
src/platform/emscripten/: CMakeLists.txt
src/platform/emscripten/resources/: release_shell.html.in
src/platform/emscripten/test/: CMakeLists.txt
src/platform/emscripten/test/cpp/: CMakeLists.txt
src/platform/facebook/: CMakeLists.txt
src/platform/ios/: CMakeLists.txt
src/platform/ios/resources/: Info.plist.in
src/platform/ios/test/: CMakeLists.txt
src/platform/ios/test/cpp/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt
src/platform/linux/test/cpp/: CMakeLists.txt
src/platform/macos/: CMakeLists.txt  GraphicsPlatform.h
src/platform/macos/test/: CMakeLists.txt
src/platform/macos/test/cpp/: CMakeLists.txt
src/platform/windows/: CMakeLists.txt
src/swig/: swig.cmake
src/swig.in/sdlskeleton/: sdlskeleton.i  sdlskeleton.swg
src/test/: TestCurlExample.cpp  TestExample.cpp  TestExample.h  TestRender.cpp
src/test/curl_examples/: 10-at-a-time.c  CurlExample.cpp  CurlExample.h  anyauthput.c  certinfo.c  chkspeed.c  cookie_interface.c  debug.c  externalsocket.c  fileupload.c  fopen.c  ftp-wildcard.c  ftpget.c  ftpgetinfo.c  ftpgetresp.c  ftpsget.c  ftpupload.c  ftpuploadfrommem.c  ftpuploadresume.c  getinfo.c  getinmemory.c  getredirect.c  http-post.c  http2-download.c  http2-pushinmemory.c  http2-serverpush.c  http2-upload.c  httpcustomheader.c  httpput.c  https.c  imap-append.c  imap-copy.c  imap-create.c  imap-delete.c  imap-examine.c  imap-fetch.c  imap-list.c  imap-lsub.c  imap-multi.c  imap-noop.c  (+43 more)
test/cpp/: CMakeLists.txt  TestExample.cpp  TestExample.h
