cmake_minimum_required(VERSION 3.5.1)

project(SDLSkeleton)

include(CheckCXXCompilerFlag)

# cmake_policy(SET CMP0078 OLD)
# cmake_policy(SET CMP0086 OLD)


CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

set(TARGET_EXECUTABLE_NAME "PLACEHOLDER" CACHE STRING "The name of the executable")
set(THIRDPARTY_DIR "${CMAKE_SOURCE_DIR}/thirdparty")
set(TARGET_DEFINITIONS "")
set(TARGET_MAIN_SOURCES "${CMAKE_SOURCE_DIR}/main.cpp")
set(TARGET_PLATFORM "none")
set(TARGET_BUNDLE_ID "com.njligames.engine.${CMAKE_PROJECT_NAME}")

if(EMSCRIPTEN)
    set(TARGET_PLATFORM "emscripten")
    list(APPEND TARGET_DEFINITIONS "__EMSCRIPTEN__=1")
    if(VR)
        list(APPEND TARGET_DEFINITIONS "__VR__=1")
    endif()
elseif(WIN32)
    if(ARCH_64)
        set(TARGET_PLATFORM "windows64")
        list(APPEND TARGET_DEFINITIONS "__WINDOWS64__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    else()
        set(TARGET_PLATFORM "windows32")
        list(APPEND TARGET_DEFINITIONS "__WINDOWS32__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    endif()
elseif(APPLE)
    if(IOS)
        set(TARGET_PLATFORM "ios")
        list(APPEND TARGET_DEFINITIONS "__IPHONEOS__=1")
        if(VR)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    elseif(TVOS)
        set(TARGET_PLATFORM "appletvos")
        list(APPEND TARGET_DEFINITIONS "__APPLETVOS__=1")
    else()
        set(TARGET_PLATFORM "macos")
        list(APPEND TARGET_DEFINITIONS "__MACOS__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    endif()
elseif(UNIX AND NOT APPLE AND NOT ANDROID)
    if(LINUX)
        set(TARGET_PLATFORM "linux")
        list(APPEND TARGET_DEFINITIONS "__LINUX__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    elseif(UNIX)
        set(TARGET_PLATFORM "unix")
        list(APPEND TARGET_DEFINITIONS "__UNIX__=1")
    endif()
elseif(ANDROID)
    set(TARGET_PLATFORM "android")
    list(APPEND TARGET_DEFINITIONS "__ANDROID__=1")
endif()

set(TARGET_RESOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/assets")

add_subdirectory(src)

