set(TARGET_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shared")
set(RESOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/resources")

file(GLOB SRCS ${TARGET_INCLUDE_DIR}/*.cpp)
file(GLOB HDRS ${TARGET_INCLUDE_DIR}/*.h)

list(APPEND TARGET_PROJECT_SOURCES ${SRCS})
list(APPEND TARGET_PROJECT_SOURCES ${HDRS})

list(APPEND TARGET_INCLUDE_DIRS ${TARGET_INCLUDE_DIR})

if(EMSCRIPTEN)
    set(TARGET_PLATFORM "emscripten")
    list(APPEND TARGET_DEFINITIONS "__EMSCRIPTEN__=1")
    if(VR)
        list(APPEND TARGET_DEFINITIONS "__VR__=1")
    endif()
    add_subdirectory(emscripten)
elseif(WIN32)
    if(ARCH_64)
        set(TARGET_PLATFORM "windows64")
        list(APPEND TARGET_DEFINITIONS "__WINDOWS64__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
        add_subdirectory(win64)
    else()
        set(TARGET_PLATFORM "windows32")
        list(APPEND TARGET_DEFINITIONS "__WINDOWS32__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
        add_subdirectory(win32)
    endif()
elseif(APPLE)
    if(IOS)
        set(TARGET_PLATFORM "ios")
        list(APPEND TARGET_DEFINITIONS "__IPHONEOS__=1")
        if(VR)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
        add_subdirectory(ios)
    elseif(TVOS)
        set(TARGET_PLATFORM "appletvos")
        list(APPEND TARGET_DEFINITIONS "__APPLETVOS__=1")
        add_subdirectory(appletvos)
    else()
        set(TARGET_PLATFORM "macos")
        list(APPEND TARGET_DEFINITIONS "__MACOS__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
        add_subdirectory(macos)
    endif()
elseif(UNIX AND NOT APPLE AND NOT ANDROID)
    if(LINUX)
        set(TARGET_PLATFORM "linux")
        list(APPEND TARGET_DEFINITIONS "__LINUX__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
        add_subdirectory(linux)
    elseif(UNIX)
        set(TARGET_PLATFORM "unix")
        list(APPEND TARGET_DEFINITIONS "__UNIX__=1")
        add_subdirectory(unix)
    endif()
elseif(ANDROID)
    set(TARGET_PLATFORM "android")
    list(APPEND TARGET_DEFINITIONS "__ANDROID__=1")

    add_subdirectory(android)
endif()

set(TARGET_PLATFORM_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_PLATFORM}")
list(APPEND TARGET_INCLUDE_DIRS "${TARGET_PLATFORM_INCLUDE_DIR}")

if(NOT ANDROID)
    enable_testing()
    add_subdirectory(test)

    add_subdirectory(doc)
endif()

