set(RESOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/resources")

file(GLOB SRCS ${CMAKE_CURRENT_SOURCE_DIR}/shared/*.cpp)
file(GLOB HDRS ${CMAKE_CURRENT_SOURCE_DIR}/shared/*.h)

list(APPEND TARGET_PROJECT_SOURCES ${SRCS})
list(APPEND TARGET_PROJECT_SOURCES ${HDRS})

list(APPEND TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/shared)

if(EMSCRIPTEN)
    set(TARGET_PLATFORM "emscripten")
    list(APPEND TARGET_DEFINITIONS "__EMSCRIPTEN__=1")
    if(VR)
        list(APPEND TARGET_DEFINITIONS "__VR__=1")
    endif()
elseif(WIN32)
    if(ARCH_64)
        set(TARGET_PLATFORM "windows64")
        list(APPEND TARGET_DEFINITIONS "__WINDOWS64__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    else()
        set(TARGET_PLATFORM "windows32")
        list(APPEND TARGET_DEFINITIONS "__WINDOWS32__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    endif()
elseif(APPLE)
    if(IOS)
        set(TARGET_PLATFORM "ios")
        list(APPEND TARGET_DEFINITIONS "__IPHONEOS__=1")
        if(VR)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    elseif(TVOS)
        set(TARGET_PLATFORM "appletvos")
        list(APPEND TARGET_DEFINITIONS "__APPLETVOS__=1")
    else()
        set(TARGET_PLATFORM "macos")
        list(APPEND TARGET_DEFINITIONS "__MACOS__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    endif()
elseif(UNIX AND NOT APPLE AND NOT ANDROID)
    if(LINUX)
        set(TARGET_PLATFORM "linux")
        list(APPEND TARGET_DEFINITIONS "__LINUX__=1")
        if(OCULUS)
            list(APPEND TARGET_DEFINITIONS "__VR__=1")
        endif()
    elseif(UNIX)
        set(TARGET_PLATFORM "unix")
        list(APPEND TARGET_DEFINITIONS "__UNIX__=1")
    endif()
elseif(ANDROID)
    set(TARGET_PLATFORM "android")
    list(APPEND TARGET_DEFINITIONS "__ANDROID__=1")
endif()

list(APPEND TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_PLATFORM})
add_subdirectory(${TARGET_PLATFORM})

if(NOT ANDROID)
    enable_testing()
    add_subdirectory(test)

    add_subdirectory(doc)
endif()

