
file(GLOB SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB HDRS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

set( TARGET_PROJECT_SOURCES ${TARGET_PROJECT_SOURCES} ${SRCS} )
set( TARGET_PROJECT_SOURCES ${TARGET_PROJECT_SOURCES} ${SRCS} PARENT_SCOPE )

set( TARGET_PROJECT_SOURCES ${TARGET_PROJECT_SOURCES} ${HDRS} )
set( TARGET_PROJECT_SOURCES ${TARGET_PROJECT_SOURCES} ${HDRS} PARENT_SCOPE )

if(NOT ANDROID)
    enable_testing()
    add_subdirectory(test)

    add_subdirectory(doc)
endif()

