
if (TARGET ${CMAKE_PROJECT_NAME}-static)
    file(GLOB SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
    file(GLOB HDRS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

    ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}-static-test ${SRCS} ${HDRS})

    TARGET_LINK_LIBRARIES(
      ${CMAKE_PROJECT_NAME}-static-test
      ${CMAKE_PROJECT_NAME}-static
      ${GTEST_LIBRARY}
      ${GMOCK_LIBRARY}
    )

    set_target_properties(${CMAKE_PROJECT_NAME}-static-test PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}")

    add_test(NAME ${CMAKE_PROJECT_NAME}-static-test COMMAND ${CMAKE_PROJECT_NAME}-static-test)
endif()




